# aegis

./: .env.example  .gitignore  BUILD_COMPLETE.md  CODEX_BUILD_PROMPT.md  FAILURES.md  FOUNDING_CHARTER.md  Makefile  PRODUCT_THESIS.md  README.md  SETUP.md  chat.py  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml  docker.yml
AGENTS/: CURATOR.md  FORGE.md  HERALD.md  LENS.md  LOOP.md  PROPHET.md  QUARTERMASTER.md  README.md  SCOUT.md  SCRIBE.md  SENSE.md  WARDEN.md
ARCHITECTURE/: ACTION_CONSEQUENCE_MAP.md  DELEGATION_MODEL_86421.md  EVENT_MODEL.md  MEMORY_MODEL.md  MODEL_ROUTING.md  OBSERVABILITY.md  POLICY_MODEL.md  README.md  SYSTEM_MAP.md  WEALTH_MODEL.md
DELEGATION/: ISSUE_TEMPLATE_AGENT.md  ISSUE_TEMPLATE_KERNEL.md  ISSUE_TEMPLATE_RESEARCH.md  PR_TEMPLATE.md  README.md  STRUCTURE_SCORE.md  TEAM_MODEL.md
DELIVERY/: ACCEPTANCE_CRITERIA.md  BENCHMARKS.md  EVALS.md  README.md  ROADMAP.md  TEST_STRATEGY.md
INTERFACES/: MOBILE.md  README.md  TELEGRAM.md  TERMINAL.md  UNIFIED_SESSION.md  VOICE.md
KERNEL/: BUS_SPEC.md  FAILOVER_RECOVERY.md  INTROSPECTION_SPEC.md  MEMORY_CLIENT_SPEC.md  POLICY_GATE_SPEC.md  README.md  ROUTER_SPEC.md  SCHEDULER_SPEC.md
MEMORY/: FORGET_RULES.md  NIGHTLY_COMPRESSION.md  README.md  REMEMBER_RULES.md  SKILL_PROMOTION.md
OPERATIONS/: CLOUDFLARE_TERMUX_SETUP.md  INCIDENT_RESPONSE.md  LOCAL_FIRST_POLICY.md  ORACLE_FREE_TIER.md  README.md  SECURITY_MODEL.md
PHASES/: PHASE_02_UNIFIED_SESSION.md  PHASE_04_REVENUE_ORGANS.md  PHASE_05_FULL_AGENT_SOCIETY.md  PHASE_06_SELF_EXTENSION.md  README.md
POLICY/: DESTRUCTIVE_ACTIONS.md  GLOBAL_INVARIANTS.md  HUMAN_APPROVAL_RULES.md  README.md  SECRET_HANDLING.md  WEALTH_ACTIONS.md
TOOLS/: APPROVAL_GATES.md  CREATIVE_TOOLS.md  DETERMINISTIC_TOOLS.md  EXECUTION_CLASSES.md  README.md  TOOL_CONTRACT.md
agents/: __init__.py  base.py  common.py
agents/forge/: README.md  __init__.py  agent.py
agents/herald/: README.md  __init__.py  agent.py  bridge.py
agents/loop/: README.md  __init__.py  agent.py
agents/scribe/: README.md  __init__.py  agent.py
agents/warden/: README.md  __init__.py  agent.py
config/: aegis.toml  default.yaml
core/: __init__.py  anomaly.py  bus.py  checkpoint.py  events.py  memory.py  outcome.py  policy.py  provenance.py  router.py  scheduler.py  session.py  state_sync.py
docs/: GRAPH.md  aegis-start.html
docs/phases/: PHASE_00.md  PHASE_01.md  PHASE_03.md
infra/: .env.example  Dockerfile  docker-compose.yml
interface/: __init__.py  server.py
kernel/: anomaly.py  bus.py  checkpoint.py  events.py  introspect.py  memory.py  orchestrator.py  outcome.py  policy.py  provenance.py  registry.py  router.py  scheduler.py  session.py  setup.py  state_sync.py
kernel/core/: __init__.py  bus.py  checkpoint.py  events.py  memory.py  policy.py  router.py
lens/: package-lock.json  package.json  server.py  tsconfig.json
lens/app/: page.tsx  (+1 more)
scripts/: bootstrap_oracle.sh  install.sh  install_boot.ps1  install_boot.sh  migrate_v0_to_v1.py
tests/: test_agents.py  test_core_anomaly.py  test_core_events.py  test_core_memory.py  test_core_policy.py  test_core_scheduler.py  test_forge.py  test_herald_bridge.py  test_kernel.py  test_loop.py  test_memory.py  test_orchestrator.py  test_outcome_layer.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_resilience.py  test_run.py  test_scheduler.py  test_setup.py  test_stress.py  test_tools.py
topics/: __init__.py
(+164 files in other folders)
