[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "2.0.0"
description = "AEGIS — Autonomous Evolving General Intelligence System"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.optional-dependencies]
full = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-telegram-bot>=21.0",
    "nats-py>=2.7",
    "aider-install",
    "chromadb",
    "qdrant-client",
    "crawl4ai",
    "scapy",
    "ccxt",
    "web3",
    "apprise",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
