[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "anyio>=4.4,<5",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.23,<1", "ruff>=0.6,<1", "mypy>=1.10,<2"]
senses = ["psutil>=6,<7", "mss>=9,<10", "RealtimeSTT>=0.3,<1", "faster-whisper>=1,<2"]
radio = ["scapy>=2.5,<3", "bleak>=0.22,<1", "python-nmap>=0.7,<1"]
browser = ["playwright>=1.45,<2"]
mcp = ["mcp>=1,<2"]
all = ["psutil>=6,<7","mss>=9,<10","RealtimeSTT>=0.3,<1","faster-whisper>=1,<2",
       "scapy>=2.5,<3","bleak>=0.22,<1","playwright>=1.45,<2","mcp>=1,<2"]

[project.scripts]
aegis = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernel*", "agents*", "lens*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "S110", "S112", "S310", "S602", "S603", "S607", "E501", "UP007"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
